# cfr-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  crates.js  plot.py  search-index.js  settings.html  source-files.js
.github/workflows/: rust.yml
bench/: all.html  fn.main.html  index.html  macro.time.html  sidebar-items.js
benches/: cfr.rs
build_leduc/: all.html  fn.main.html  index.html  sidebar-items.js
build_leduc/leduc/: fn.detail.html  fn.legal_actions.html  fn.observation.html  fn.possible_actions.html  fn.rule.html  fn.terminal_val.html  fn.transition.html  fn.winner.html  index.html  sidebar-items.js  struct.Leduc.html  struct.RuleBuilder.html  struct.State.html
cfr_rs/: all.html  index.html  sidebar-items.js
cfr_rs/action/: index.html  sidebar-items.js  struct.Action.html  struct.ActionId.html
cfr_rs/cfr/: fn.calc_nash_strt.html  index.html  sidebar-items.js
cfr_rs/node/: enum.Node.html  index.html  sidebar-items.js  struct.InformationSetId.html  struct.NodeId.html  type.InformationSet.html
cfr_rs/player/: enum.Player.html  index.html  sidebar-items.js
cfr_rs/rule/: fn.from_json.html  fn.from_path.html  index.html  sidebar-items.js  struct.Rule.html
cfr_rs/solver/: fn.calc_best_resp.html  fn.calc_ev.html  fn.calc_min_epsilon.html  fn.calc_nash_conv.html  index.html  sidebar-items.js
main/: all.html  fn.init_logger.html  fn.main.html  index.html  sidebar-items.js  struct.Args.html
src/: action.rs  cfr.rs  lib.rs  main.rs  node.rs  player.rs  profile.rs  rule.rs  solver.rs  strategy.rs  transition.rs  visualizer.rs
tests/: solver.rs
(+55 files in other folders)
