[package]
name = "cfr-rs"
version = "0.1.0"
authors = ["Keigo Habara <k.habara.aa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ord_subset = "3"
approx_eq = "0.1"
indicatif = {version = "*", features = ["rayon"]}
log = "0.4.0"
log4rs = "1.0.0"